fixed playlist spacing

--- a/apps/music-applications-f/src/app/app-styles.scss
+++ b/apps/music-applications-f/src/app/app-styles.scss
@@ -139,6 +139,7 @@ p {
 .playlist-item-info {
   display: flex;
   flex-direction: row;
+  width: 40%;
 }
 
 .artist-item-page-title,
@@ -203,7 +204,7 @@ p {
 .featured-tracks-wrapper {
   display: flex;
   flex-direction: column;
-  margin-left: 20px;
+  width:60%
 }
 
 .album-track-name,
